2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core.Assemblies/TargetRuntime.cs:
	* MonoDevelop.Core.Execution/ExecutionEnvironment.cs:
	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs:
	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Added ExecutionEnvironment class, which can be used to
	  customize the environment of a process.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Project.cs: Use a monitor task for the
	  build so things get indented properly in the build output
	  pad.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs: Use
	  start & end offset for regions, not start + length.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs:
	  CreateMemberImplementation now returns a
	  CodeGeneratorMemberResult with body regions.

	* MonoDevelop.Projects.Dom/IDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Fix
	  spelling.

2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Added option for
	  setting a project to use an external console.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/Formatter.cs: Fixed 'Bug 611202 -
	  Move line up/down command fails in aspx files'.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs: Code
	  generator get's now used by code completion auto generation
	  & insert code feature.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs: Worked
	  on code generation.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs: Append
	  new line between members.
